# fastapi-project-tree

./: README.md  main.py  pyproject.toml  users.db
app/api/v1/endpoints/: users.py
app/crud/: user.py
app/db/: session.py
app/models/: user.py
app/schemas/: user.py
