[tool.poetry]
name = "fastapi-project-tree"
version = "0.1.0"
description = ""
authors = ["jeonck <ck.jeon@sk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = {extras = ["email"], version = "^2.9.2"}
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
